Update: - fix bug

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,6 @@
 <body>
     <div id="game"></div>
 </body>
-<script type="module" src="index.js"></script>
+<script type="module" src="scripts/index.js"></script>
 
 </html>
